# call-by-preference

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  call-by-preference.cabal
example/: Examples.hs
example/Control/Prog/Example/: ML.hs
example/Control/Prog/Example/ML/: Ref.hs  TextIO.hs
src/lib/Control/: Prog.hs
src/lib/Control/Prog/: Class.hs  Prog.hs  Signature.hs
src/lib/Control/Prog/Effect/: Cut.hs  Deferred.hs  Embed.hs  Error.hs  Fail.hs  Input.hs  InputFile.hs  Let.hs  NonDet.hs  None.hs  Output.hs  OutputFile.hs  Prob.hs  Reader.hs  Ref.hs  State.hs  TextIO.hs  Trace.hs  Writer.hs  Yield.hs
src/lib/Control/Prog/Util/: List.hs  Upcast.hs
src/test/: Spec.hs
src/test/Control/Prog/Effect/: CutTests.hs  DeferredTests.hs  ErrorTests.hs  FailTests.hs  InputTests.hs  MLTests.hs  NonDetTests.hs  OutputTests.hs  ProbTests.hs  ReaderTests.hs  RefTests.hs  StateTests.hs  TraceTests.hs  WriterTests.hs  YieldTests.hs
src/test/Control/Prog/Util/: Tags.hs
